Add icons and Chrome Web Store metadata

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,12 @@
   "manifest_version": 3,
   "name": "Summarize with Gemini",
   "version": "1.0",
-  "description": "Right-click a link to summarize it with Google Gemini",
+  "description": "Summarize any link with Google Gemini. Alt+Click or right-click any link to get a quick TLDR — especially useful for YouTube videos.",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": ["contextMenus", "storage"],
   "background": {
     "service_worker": "background.js"
